[gd_scene load_steps=3 format=3 uid="uid://cr6wfurweno23"]

[ext_resource type="PackedScene" uid="uid://bvfxhovxygquo" path="res://Scenes/Character Planner Menu/Input Int.tscn" id="1_5gaae"]
[ext_resource type="Script" path="res://Scenes/Character Planner Menu/input_cell.gd" id="1_cgsn8"]

[node name="InputCell" type="VBoxContainer"]
unique_name_in_owner = true
size_flags_horizontal = 3
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
script = ExtResource("1_cgsn8")
metadata/_edit_lock_ = true

[node name="HiddenRow" type="Control" parent="."]
visible = false
layout_mode = 2

[node name="InputInt" parent="HiddenRow" instance=ExtResource("1_5gaae")]
unique_name_in_owner = true
layout_mode = 2
offset_top = 8.0
offset_right = 73.0
offset_bottom = 39.0
caret_column = 1

[node name="InputAdd" type="Button" parent="HiddenRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(27, 0)
layout_mode = 2
offset_left = 71.0
offset_top = 8.0
offset_right = 98.0
offset_bottom = 39.0
mouse_default_cursor_shape = 2
text = "+1"
metadata/_edit_lock_ = true

[node name="InputSub" type="Button" parent="HiddenRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(27, 0)
layout_mode = 2
offset_left = 102.0
offset_top = 8.0
offset_right = 129.0
offset_bottom = 39.0
mouse_default_cursor_shape = 2
text = "-1"
metadata/_edit_lock_ = true

[node name="InputMax" type="Button" parent="HiddenRow"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 43.0
offset_right = 41.0
offset_bottom = 74.0
mouse_default_cursor_shape = 2
text = "Max"
metadata/_edit_lock_ = true

[node name="InputCycle" type="Button" parent="HiddenRow"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 45.0
offset_top = 43.0
offset_right = 121.0
offset_bottom = 74.0
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "Next Asc"
metadata/_edit_lock_ = true

[node name="InputSwitch" type="CheckButton" parent="HiddenRow"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 77.0
offset_top = 8.0
offset_right = 121.0
offset_bottom = 39.0
mouse_default_cursor_shape = 2
metadata/_edit_lock_ = true

[node name="InputCheckBox" type="CheckBox" parent="HiddenRow"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 24.0
offset_bottom = 24.0
metadata/_edit_lock_ = true

[connection signal="pressed" from="HiddenRow/InputAdd" to="." method="add_pressed"]
[connection signal="pressed" from="HiddenRow/InputSub" to="." method="sub_pressed"]
[connection signal="pressed" from="HiddenRow/InputMax" to="." method="max_pressed"]
[connection signal="pressed" from="HiddenRow/InputCycle" to="." method="cycle_pressed"]
[connection signal="pressed" from="HiddenRow/InputSwitch" to="." method="switch_pressed"]
